RESOLVED FIXED275881
[visionOS] Safari can crash when entering LinearMediaPlayer fullscreen
https://bugs.webkit.org/show_bug.cgi?id=275881
Summary [visionOS] Safari can crash when entering LinearMediaPlayer fullscreen
Andy Estes
Reported 2024-06-25 16:45:10 PDT
SSIA
Attachments
Andy Estes
Comment 1 2024-06-25 16:47:47 PDT
Andy Estes
Comment 2 2024-06-25 16:53:44 PDT
EWS
Comment 3 2024-06-25 21:14:21 PDT
Committed 280363@main (23871b356787): <https://commits.webkit.org/280363@main> Reviewed commits have been landed. Closing PR #30172 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.